--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сложно сосредоточиться</title>
     <meta name="color-scheme" content="dark light">
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
     <link rel="stylesheet" href="./styles/globals.css">
-    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="icon" href="images/favicon.ico" sizes="any"/>
     <link rel="icon" href="images/favicon.svg" type="image/svg+xml"/>
     <link rel="apple-touch-icon" href="images/mobile-icon.png"/>
@@ -62,6 +62,7 @@
             <div class="advice-list__item">
               <h3 class="advice_heading title-decor">Дофамин</h3>
               <p class="advice_text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+            </div>
           </li>
         </ul>
       </section>
