--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <meta name="color-scheme" content="dark light">
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
-    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="icon" href="images/favicon.ico" sizes="any"/>
     <link rel="icon" href="images/favicon.svg" type="image/svg+xml"/>
     <link rel="apple-touch-icon" href="images/mobile-icon.png"/>
   </head>
   <body class="page">
     <header class="cover header decorated-zone">
-      <div class="rec-decor" aria-hidden="true"></div>
+      <span class="rec-decor" aria-hidden="true"></span>
         <nav class="header__theme-menu">
           <ul class="header__theme-menu-list">
             <li class="header__theme-menu-item">
@@ -55,7 +55,7 @@
           <li>
             <div class="advice-list__item">
               <h3 class="advice_heading title-decor">Многозадачность</h3>
-              <p class="advice_text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="link shadow-decor" href="https://www.dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+              <p class="advice_text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="link shadow-decor" href="https://www.dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
             </div>
           </li>
           <li>
@@ -96,31 +96,31 @@
           <ul class="advice-list section_how__advice-list">
             <li>
               <div class="advice-list__item">
-                <h3 class="advice_heading title-decor">Представьте небо и облака</h3>
+                <h4 class="advice_heading title-decor">Представьте небо и облака</h4>
                 <p class="advice_text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
               </div>
             </li>
             <li>
               <div class="advice-list__item">
-                <h3 class="advice_heading title-decor">Включите музыку</h3>
+                <h4 class="advice_heading title-decor">Включите музыку</h4>
                 <p class="advice_text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
               </div>
             </li>
             <li>
               <div class="advice-list__item">
-                <h3 class="advice_heading title-decor">Прогуляйтесь</h3>
-                <p class="advice-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link shadow-decor" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+                <h4 class="advice_heading title-decor">Прогуляйтесь</h4>
+                <p class="advice-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link shadow-decor" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
               </div>
             </li>
             <li>
               <div class="advice-list__item">
-                <h3 class="advice_heading title-decor">Хорошо ешьте</h3>
+                <h4 class="advice_heading title-decor">Хорошо ешьте</h4>
                 <p class="advice-text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
               </div>
             </li>
             <li>
               <div class="advice-list__item">
-                <h3 class="advice_heading title-decor">Читайте</h3>
+                <h4 class="advice_heading title-decor">Читайте</h4>
                 <p class="advice-text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
               </div>
             </li>
@@ -132,27 +132,27 @@
         <ul class="images-list">
           <li class="images-list__item">
             <picture>
-              <img class="images-list__item-img" src="images/sunset.png" alt="Картинка закат">
+              <img class="images-list__item-img" src="images/sunset.png" alt="Картинка закат" loading="lazy">
             </picture>
           </li>
           <li class="images-list__item">
             <picture>
-              <img class="images-list__item-img" src="images/ice-cream.png" alt="Картинка мороженое">
+              <img class="images-list__item-img" src="images/ice-cream.png" alt="Картинка мороженое" loading="lazy">
             </picture>
           </li>
           <li class="images-list__item">
             <picture>
-              <img class="images-list__item-img" src="images/tape.png" alt="Картинка касеты">
+              <img class="images-list__item-img" src="images/tape.png" alt="Картинка касеты" loading="lazy">
             </picture>
           </li>
           <li class="images-list__item">
             <picture>
-              <img class="images-list__item-img" src="images/books.png" alt="Картинка книги">
+              <img class="images-list__item-img" src="images/books.png" alt="Картинка книги" loading="lazy">
             </picture>
           </li>
           <li class="images-list__item">
             <picture>
-              <img class="images-list__item-img" src="./images/street.png" alt="Картинка улицв">
+              <img class="images-list__item-img" src="./images/street.png" alt="Картинка улицв" loading="lazy">
             </picture>
           </li>
         </ul>
